# Advent-of-Code-2024

./: .gitignore  pyproject.toml
day-1/: README.md  input.csv  simple.py
